# pertpipe

./: .gitignore  README.md  __main__.py  pertpipe.py  pyproject.toml  setup.py
databases/: 23S_rRNA.fasta.fai  23s_rRNA_VDomain.bed  IS_elements.fasta  fhaB.fasta  silva_bor.bed
databases/bpertussis/: 23SrRNA.tfa  ptxA.tfa  ptxE.tfa  ptxP.tfa
pertpipe/: abricate_info.py  assists.py  mres_blast.py  mres_copy_no.py  pertpipe.py  prn_assists.py  prn_info.py  prn_info_old.py  virulence_info.py
pertpipe/databases/: 23S_rRNA.fasta  IR_PRN.fasta
pertpipe/databases/bp-only_vfdb/: sequences
pertpipe/databases/bpertussis/: bpertussis.txt  fhaB24005550.tfa  fim2.tfa  fim3.tfa  prn.tfa  ptxB.tfa  ptxC.tfa  ptxD.tfa
scripts/: arguments.py  assists.py  cmd_runners.py  mres_blast.py  mres_copy_no.py  mres_map.py  prn_assists.py  prn_info_old.py  virulence_info.py
tests/: CIDM-MRBP01.fna  H640.fasta
